# huffman_archiver

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
report/: report.tex
src/: bundling.rs  coding.rs  lib.rs  main.rs
